Pseudorandom binary and trinary generator implementation according to spec

--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NTRU Encrypt\n",
+    "# NTRU Encrypt - PKE Scheme\n",
     "\n",
     "O sistema criptográfico NTRU é um sistema de chave pública baseado em reticulados, tendo sido o primeiro deste tipo. \n",
     "\n",
@@ -75,79 +75,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hashlib import sha512, pbkdf2_hmac\n",
+    "from hashlib import sha512\n",
+    "from random import randint\n",
     "\n",
     "CRYPTO_BYTES = 32\n",
     "\n",
     "class NTRU(object):\n",
-    "    def __init__(self, d):\n",
-    "        self.d = d\n",
-    "        self.N = next_prime(1 << self.d)\n",
-    "        self.p = 3\n",
-    "        self.q = next_prime(self.p*self.N)\n",
+    "    def __init__(self, manual, d, N=None, p=None, q=None):\n",
+    "        if manual:\n",
+    "            self.d = d\n",
+    "            self.N = N\n",
+    "            self.p = p\n",
+    "            self.q = q\n",
+    "        else:\n",
+    "            self.d = d\n",
+    "            self.N = next_prime(1 << self.d)\n",
+    "            self.p = 3\n",
+    "            self.q = next_prime(self.p*self.N)\n",
     "        Z.<x>  = ZZ[]\n",
     "        Q.<x>  = PolynomialRing(GF(self.q),name='x').quotient(x^self.N-1)\n",
     "        self.Q = Q\n",
     "        self.keygen()\n",
     "        \n",
     "    def keygen(self):\n",
-    "        smpl = Sampler(self.N, self.d, self.d+1, None)\n",
-    "        seq = smpl.gen_trinary_string()\n",
-    "        F = self.Q(smpl.gen_trinary_string())       \n",
+    "        # Instantiate Sampler with T (d + 1, d) and seed;\n",
+    "        seed =  int(sha512(bytes(\"12122121\")).hexdigest(), 16)\n",
+    "        sampler = Sampler(self.N, self.d, self.d+1, seed)\n",
+    "        F = self.Q(sampler.genTrinaryPolynomial())\n",
     "        f = 1 + self.p*F\n",
     "        while not f.is_unit():\n",
-    "            F = self.Q(smpl.gen_trinary_string())\n",
+    "            F = self.Q(sampler.genTrinaryPolynomial())\n",
     "            f = 1 + self.p*F\n",
-    "        G = self.Q(smpl.gen_trinary_string())\n",
-    "        g = self.p*G\n",
-    "        h = self.rnd_modq(f^(-1) * g)\n",
-    "        self.chvpriv = (f,g)\n",
-    "        self.chvpub = h\n",
-    "        \n",
-    "    def kem_encap(self, seed):\n",
-    "        encaped_sec = [choice([0,1]) for i in range(8*32)]\n",
-    "        c = self.encrypt(encaped_sec, seed)\n",
-    "        shared_sec = pbkdf2_hmac('sha512', bytes(encaped_sec), bytes(self.chvpub), 100000)\n",
-    "        return c, shared_sec\n",
-    "    \n",
-    "    def kem_decap(self, c):\n",
-    "        encaped_sec = self.decrypt(c)\n",
-    "        shared_sec = pbkdf2_hmac('sha512', bytes(encaped_sec), bytes(self.chvpub), 100000)\n",
-    "        return shared_sec\n",
-    "        \n",
-    "        \n",
+    "        g = self.p*self.Q(sampler.genTrinaryPolynomial())\n",
+    "        h = self.rnd_modq(g/f)\n",
+    "        self.skey = (f,g)\n",
+    "        self.h = h\n",
+    "\n",
     "    def encrypt(self, msg, seed):\n",
+    "        # m = Pad(msg, seed)\n",
     "        padded_msg = self.pad_msg(msg, seed)\n",
-    "        m_h = bytes(padded_msg + self.chvpub)\n",
-    "        rseed = int(sha512(m_h).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, 0, 0, rseed)\n",
-    "        r = self.Q(smpl.gen_trinary_string())\n",
-    "        t = r*self.Q(self.chvpub)\n",
+    "        # rseed = Hash(m|h)\n",
+    "        rseed = int(sha512(bytes(padded_msg + self.h)).hexdigest(), 16)\n",
+    "        # Instantiate Sampler with T and rseed\n",
+    "        sampler = Sampler(self.N, self.d, self.d+1, rseed)\n",
+    "        #r ← Sampler\n",
+    "        r = self.Q(sampler.genTrinaryPolynomial())\n",
+    "        #t=r∗h\n",
+    "        t = r*self.Q(self.h)\n",
+    "        #tseed = Hash(t)\n",
     "        tseed = int(sha512(bytes(t)).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, 0, 0, tseed)\n",
-    "        msg_mask = self.Q(smpl.gen_trinary_string())\n",
+    "        #Instantiate Sampler with T and tseed;\n",
+    "        sampler = Sampler(self.N, self.d, self.d+1, tseed)\n",
+    "        #mmask ← Sampler\n",
+    "        msg_mask = self.Q(sampler.genTrinaryPolynomial())\n",
+    "        # m0 =m−mmask (modp)\n",
     "        masked_msg = self.rnd_modp(self.rnd_modq(self.Q(padded_msg) - msg_mask))\n",
+    "        #c=t+m0\n",
     "        crypt = t + self.Q(masked_msg)\n",
     "        return crypt\n",
     "\n",
     "    def decrypt(self, crypt):\n",
-    "        masked_msg = self.rnd_modp(self.rnd_modq(self.chvpriv[0] * crypt))\n",
+    "        # m0 = f ∗ c (mod p)\n",
+    "        masked_msg = self.rnd_modp(self.rnd_modq(self.skey[0] * crypt))\n",
+    "        # t=c−m\n",
     "        t = crypt - self.Q(masked_msg)\n",
+    "        # tseed = Hash(t)\n",
     "        tseed = int(sha512(bytes(t)).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, 0, 0, tseed)\n",
-    "        msg_mask = self.Q(smpl.gen_trinary_string())\n",
+    "        # Instantiate Sampler with T and tseed;\n",
+    "        sampler = Sampler(self.N, self.d, self.d+1, tseed)\n",
+    "        # mmask = Sampler\n",
+    "        msg_mask = self.Q(sampler.genTrinaryPolynomial())\n",
+    "        # m=m0+mmask (modp)\n",
     "        padded_msg = self.rnd_modp(self.rnd_modq(self.Q(masked_msg) + msg_mask))\n",
-    "        m_h = bytes(padded_msg + self.chvpub)\n",
-    "        rseed = int(sha512(m_h).hexdigest(), 16)\n",
-    "        smpl = Sampler(self.N, 0, 0, rseed)\n",
-    "        r = self.Q(smpl.gen_trinary_string())\n",
+    "        # rseed = Hash(m|h)\n",
+    "        rseed = int(sha512(bytes(padded_msg + self.h)).hexdigest(), 16)\n",
+    "        # Instantiate Sampler with T and rseed;\n",
+    "        sampler = Sampler(self.N, self.d, self.d+1, rseed)\n",
+    "        # r ← Sampler\n",
+    "        r = self.Q(sampler.genTrinaryPolynomial())\n",
+    "        # msg, mlen = Extract(m)\n",
     "        msg, mlen = self.extract_msg(padded_msg)\n",
-    "        print(msg)\n",
-    "        if self.Q(self.p)*r*self.Q(self.chvpub) == t:\n",
+    "        # if p · r ∗ h = t then\n",
+    "        if (self.p*r)*self.Q(self.h) == t:\n",
     "            result = msg[:mlen]\n",
     "        else:\n",
     "            result = \"Error\"\n",
@@ -171,7 +184,6 @@
     "        ''' Pad message according to NTRU spec\n",
     "        '''\n",
     "        mlen = len(msg)\n",
-    "        print(mlen)\n",
     "        if mlen < (self.N - 173):\n",
     "            fill_len = self.N-173-mlen+1\n",
     "            if seed:\n",
@@ -179,7 +191,7 @@
     "            else:\n",
     "                set_random_seed()\n",
     "            rand_pad = [choice([-1, 0, 1]) for i in range(167)]\n",
-    "            padded_msg = msg\n",
+    "            padded_msg = copy(msg)\n",
     "            padded_msg.extend([0] * fill_len)\n",
     "            padded_msg.extend(rand_pad)\n",
     "            for i in range(5):\n",
@@ -197,102 +209,66 @@
     "    \n",
     "    \n",
     "class Sampler:\n",
-    "    ''' Generate random bit strings of fixed size based on imposed restrictions\n",
-    "    '''\n",
-    "    def __init__(self, N, d, e, seed):\n",
-    "        if seed!=None:\n",
-    "            set_random_seed(seed)\n",
+    "    def __init__(self, N, d1, d2, seed):\n",
+    "        self.N = N\n",
+    "        if d1 and d2:\n",
+    "            self.d1 = d1\n",
+    "            self.d2 = d2\n",
     "        else:\n",
-    "            set_random_seed() #seed automatically selected\n",
-    "        if d and e:\n",
-    "            self.pool = [-1]*e + [1]*d + [0]*(N-d-e)\n",
-    "            shuffle(self.pool)\n",
-    "        else:\n",
-    "            self.pool = [choice([-1,0,1]) for i in range(0,N)]\n",
+    "            self.d1 = randint(0, self.N)\n",
+    "            self.d2 = randint(0, self.N-self.d1)\n",
+    "        self.seed = seed\n",
+    "        \n",
+    "    def genBinaryPolynomial(self):\n",
+    "        f = [0]*self.N\n",
+    "        t = 0\n",
+    "        while t < self.d1:\n",
+    "            bit_count = ceil(log(self.N)) + 1\n",
+    "            k = self.seed%(2**bit_count)\n",
+    "            self.seed >>= bit_count\n",
+    "            i = k % self.N\n",
+    "            if f[i] == 0:\n",
+    "                f[i] = 1\n",
+    "                t += 1\n",
+    "        return f\n",
     "    \n",
-    "    def gen_trinary_string(self):\n",
-    "        shuffle(self.pool)\n",
-    "        return self.pool\n",
-    "    \n",
-    "def gen_bstring(n):\n",
-    "    '''Generate a random bit string\n",
-    "    '''\n",
-    "    return [choice([-1,0,1]) for k in range(n)]  "
+    "    def genTrinaryPolynomial(self):\n",
+    "        f = self.genBinaryPolynomial()\n",
+    "        t = 0\n",
+    "        while t < self.d2:\n",
+    "            bit_count = ceil(log(self.N)) + 1\n",
+    "            k = self.seed%(2**bit_count)\n",
+    "            self.seed >>= bit_count\n",
+    "            i = k % self.N\n",
+    "            if f[i] == 0:\n",
+    "                f[i] = -1\n",
+    "                t += 1\n",
+    "        return f  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 204,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "urandom() takes exactly 1 argument (0 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-19d0f0afcaa1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNTRU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgen_bstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: urandom() takes exactly 1 argument (0 given)"
-     ]
-    }
-   ],
-   "source": [
-    "K = NTRU(10)\n",
-    "m = gen_bstring(10)\n",
-    "seed = os.urandom()\n",
-    "e = K.encrypt(m, seed)\n",
-    "d = K.decrypt(e)\n",
-    "print(d)\n",
-    "print(d==e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "256\n",
-      "[1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, -1, 0, -1, 1, 1, 1, -1, 1, 0, 0, 1, -1, -1, 1, -1, 0, 1, -1, 1, 0, -1, 1, 1, 0, 0, 0, 0, 1, -1, 1, -1, 0, -1, 1, -1, -1, -1, -1, 1, 0, -1, 1, 1, -1, 1, 0, -1, -1, 0, 1, -1, 0, 0, -1, 1, -1, 0, 1, 0, -1, -1, 1, 1, 1, -1, 0, -1, -1, -1, 0, -1, 0, -1, 0, 1, 0, 0, -1, 0, -1, -1, 1, 1, 1, -1, 1, 0, 0, 1, 0, 1, -1, 0, -1, 0, -1, 0, 1, -1, 0, -1, -1, 1, 1, -1, 0, -1, 0, 1, -1, 1, 0, 0, 1, 1, -1, 1, 0, -1, 0, 0, -1, -1, -1, -1, -1, 1, 1, 1, -1, 0, 0, -1, -1, -1, 1, -1, 0, 0, -1, 0, 0, -1, -1, 0, -1, 1, 0, 0, -1, -1, -1, 1, 0, -1, 0, -1, 0, 0, 0, 1, -1, 0, -1, -1, 0, 0, 0, 0, 0]\n"
+      "False\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\xb1\\x1ae\\xc4\\xaf\\xeaita+WS\\xd5MA\\xe4\\xd2\\xdf\\xc3\\x90\\xa4\\xc4TC\\xe6\\xcbq\\x83L'2|\\xceZB\\x90\\xeb\\xd4\\x0b\\x98\\x93\\xc4cd\\x86\\xb5\\x89\\xec\\xef\\xba\\xe4\\xbc\\xd1=]\\xba\\x81\\x80I/\\x93\\xc9\\xe3k\""
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "K = NTRU(10)\n",
-    "seed = ZZ.random_element()\n",
-    "c, ss = K.kem_encap(seed)\n",
-    "K.kem_decap(c)"
+    "K = NTRU(False, 10)\n",
+    "#K = NTRU(True, 10, N=443, q=2048, p=3) #NTRU-443\n",
+    "msg = [choice([-1,0,1]) for i in range(10)]\n",
+    "e = K.encrypt(m, seed)\n",
+    "d = K.decrypt(e)\n",
+    "print(d==m)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
