Fix integrity verification on NTRU decrypt method

--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,51 +116,37 @@
     "        self.h = h\n",
     "\n",
     "    def encrypt(self, msg, seed):\n",
-    "        # m = Pad(msg, seed)\n",
     "        padded_msg = self.pad_msg(msg, seed)\n",
-    "        # rseed = Hash(m|h)\n",
+    "\n",
     "        rseed = int(sha512(bytes(padded_msg + self.h)).hexdigest(), 16)\n",
-    "        # Instantiate Sampler with T and rseed\n",
     "        sampler = Sampler(self.N, self.d, self.d+1, rseed)\n",
-    "        #r ← Sampler\n",
     "        r = self.Q(sampler.genTrinaryPolynomial())\n",
-    "        #t=r∗h\n",
     "        t = r*self.Q(self.h)\n",
-    "        #tseed = Hash(t)\n",
+    "\n",
     "        tseed = int(sha512(bytes(t)).hexdigest(), 16)\n",
-    "        #Instantiate Sampler with T and tseed;\n",
     "        sampler = Sampler(self.N, self.d, self.d+1, tseed)\n",
-    "        #mmask ← Sampler\n",
     "        msg_mask = self.Q(sampler.genTrinaryPolynomial())\n",
-    "        # m0 =m−mmask (modp)\n",
+    "        \n",
     "        masked_msg = self.rnd_modp(self.rnd_modq(self.Q(padded_msg) - msg_mask))\n",
-    "        #c=t+m0\n",
     "        crypt = t + self.Q(masked_msg)\n",
-    "        return crypt\n",
+    "        return crypt.list()\n",
     "\n",
     "    def decrypt(self, crypt):\n",
-    "        # m0 = f ∗ c (mod p)\n",
+    "        crypt = self.Q(crypt)\n",
     "        masked_msg = self.rnd_modp(self.rnd_modq(self.skey[0] * crypt))\n",
-    "        # t=c−m\n",
     "        t = crypt - self.Q(masked_msg)\n",
-    "        # tseed = Hash(t)\n",
+    "        \n",
     "        tseed = int(sha512(bytes(t)).hexdigest(), 16)\n",
-    "        # Instantiate Sampler with T and tseed;\n",
     "        sampler = Sampler(self.N, self.d, self.d+1, tseed)\n",
-    "        # mmask = Sampler\n",
     "        msg_mask = self.Q(sampler.genTrinaryPolynomial())\n",
-    "        # m=m0+mmask (modp)\n",
     "        padded_msg = self.rnd_modp(self.rnd_modq(self.Q(masked_msg) + msg_mask))\n",
-    "        # rseed = Hash(m|h)\n",
+    "\n",
     "        rseed = int(sha512(bytes(padded_msg + self.h)).hexdigest(), 16)\n",
-    "        # Instantiate Sampler with T and rseed;\n",
     "        sampler = Sampler(self.N, self.d, self.d+1, rseed)\n",
-    "        # r ← Sampler\n",
     "        r = self.Q(sampler.genTrinaryPolynomial())\n",
-    "        # msg, mlen = Extract(m)\n",
-    "        msg, mlen = self.extract_msg(padded_msg)\n",
-    "        # if p · r ∗ h = t then\n",
-    "        if (self.p*r)*self.Q(self.h) == t:\n",
+    "        \n",
+    "        if r*self.Q(self.h) == t:\n",
+    "            msg, mlen = self.extract_msg(padded_msg)\n",
     "            result = msg[:mlen]\n",
     "        else:\n",
     "            result = \"Error\"\n",
@@ -186,11 +172,8 @@
     "        mlen = len(msg)\n",
     "        if mlen < (self.N - 173):\n",
     "            fill_len = self.N-173-mlen+1\n",
-    "            if seed:\n",
-    "                set_random_seed(seed)\n",
-    "            else:\n",
-    "                set_random_seed()\n",
-    "            rand_pad = [choice([-1, 0, 1]) for i in range(167)]\n",
+    "            sampler = Sampler(167, self.d, self.d+1, seed)\n",
+    "            rand_pad = sampler.genTrinaryPolynomial()\n",
     "            padded_msg = copy(msg)\n",
     "            padded_msg.extend([0] * fill_len)\n",
     "            padded_msg.extend(rand_pad)\n",
@@ -214,9 +197,6 @@
     "        if d1 and d2:\n",
     "            self.d1 = d1\n",
     "            self.d2 = d2\n",
-    "        else:\n",
-    "            self.d1 = randint(0, self.N)\n",
-    "            self.d2 = randint(0, self.N-self.d1)\n",
     "        self.seed = seed\n",
     "        \n",
     "    def genBinaryPolynomial(self):\n",
@@ -248,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -257,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -265,9 +245,10 @@
     "K = NTRU(False, 10)\n",
     "#K = NTRU(True, 10, N=443, q=2048, p=3) #NTRU-443\n",
     "msg = [choice([-1,0,1]) for i in range(10)]\n",
-    "e = K.encrypt(m, seed)\n",
+    "seed =  int(sha512(bytes(\"12122121\")).hexdigest(), 16)\n",
+    "e = K.encrypt(msg, seed)\n",
     "d = K.decrypt(e)\n",
-    "print(d==m)"
+    "print(d==msg)"
    ]
   }
  ],
