--- a/TP3/RSA_Attack.ipynb
+++ b/TP3/RSA_Attack.ipynb
@@ -6,14 +6,64 @@
    "source": [
     "# Ataques ao RSA\n",
     "\n",
-    "O criptosistema RSA baseia-se na dificuldade em determinar $p$ e $q$ dado um inteiro $N$, tal que $N=p*q$ com $p$ e $q$ primos."
+    "O criptosistema RSA baseia-se na dificuldade em determinar $p$ e $q$ dado um inteiro $N$, tal que $N=p*q$ com $p$ e $q$ primos.\n",
+    "\n",
+    "Pretende-se implementar os ataques à inversão da chave pública e inversão do criptograma, usando redução de bases.  Verificando para que gama de valores dos parâmetros $N,q$ esses ataques são viáveis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Teorema (CopperSmith, Howgrave-Graham,May)\n",
+    "\n",
+    "Dado um inteiro $N>1$ e um polinómio mónico $f \\in \\mathbb{Z}[x]$, para todo o parâmetro racional $0<\\beta\\le 1$, é possivel determinar em tempo polinomial, todos os inteiros $w$ tais que:\n",
+    "$|w| \\le N^{\\beta ^2 /d}$ e $mdc(f(w),N) \\ge N^{\\beta}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A importância do algoritmo de CopperSmith e, de forma geral, dos algoritmos de redução de bases em reticulados, provém da sua aplicabilidade em ataques a algumas das técnicas mais usadas, nomeadamente ao RSA.\n",
+    "\n",
+    "## Invertibilidade do criptograma RSA\n",
+    "No início do uso do RSA além de não se usar qualquer forma de *padding* aleatória, também prevalecia o mau hábito de usar como chave pública um número primo pequeno, sendo frequente usar-se, para cifrar, um expoente público $d = 3$. Consequentemente, o criptograma relacionava-se com o *plaintext* numa relação da forma:\n",
+    "$$c \\equiv m^d mod N,$$\n",
+    "sendo N o módulo RSA e $c,m \\in \\mathbb{Z}_{N}^{*}$ o ciptograma e o *plaintext*, respetivamente.\n",
+    "\n",
+    "Um **ataque por inversão de criptograma** resolve o problema: $$N,d,c\\leadsto m,$$\n",
+    "sem passar pelo conhecimento da chave pública.\n",
+    "Para usar o **algoritmo de CopperSmith** vamos alterá-lo ligeiramente. Considere-se: $$m = m' + w$$ e o seguinte problema:\n",
+    "$$N,d,c,m' \\leadsto w: (w+m')^d \\equiv c \\ mod N.$$\n",
+    "\n",
+    "Isto é, conhecendo uma parte do *plaintext*, procura-se determinar a diferença: $w = m -m'$, entre o *plaintext* que se pretende conhcer e a parte que já é conhecida.\n",
+    "\n",
+    "Assim o algoritmo de CopperSmith é, assim, aplicado ao polinómio: $$f(x) \\equiv (x+m')^d -c$$\n",
+    "e o que se pretende determinar é a raiz modular deste $f$, i.e., pretende-se clacular $w$ que verifique: $$f(w) \\equiv 0 \\ mod \\ N.$$\n",
+    "\n",
+    "As condições do algoritmo exigem que $w$ seja limitada a um valor $X \\le N^{\\beta^2/d}.$\n",
+    "\n",
+    "Usando a versão do algoritmo $\\beta = 1$ e considerando que o ataque se faz em relação à má chave pública, $d = 3$, então será $X \\le N^{1/3}$. Em termos de tamanh, X, que é o tamanho da icógnita w, tem um terço dos *bits* de N.\n",
+    "\n",
+    "Com estes parâmetros, o algoritmo de CopperSmith calcula as raizes modulares do polinómio $$f(x) \\equiv (x+m')^d-c.$$\n",
+    "A raiz $w$, que verifica $f(w) \\equiv 0 \\ mod \\ N$, adicionada à parte conhecida $m'$, produz todo o *plaintext* m."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-3fae9a288cfa>, line 50)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-3fae9a288cfa>\"\u001b[0;36m, line \u001b[0;32m50\u001b[0m\n\u001b[0;31m    R.<x> = PolynomialRing(N, implementation='NTL')\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class RSA:\n",
     "    def __init__(self, l):\n",
@@ -106,20 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[                  1                   0                   1]\n",
-      "[                  0                   1 2332308929521884002]\n",
-      "[                   1                    0                    1]\n",
-      "[-1166154464760942001                    1  1166154464760942001]\n",
-      "611893707\n",
-      "True\n",
-      "True\n"
+     "ename": "NameError",
+     "evalue": "name 'RSA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-87475ebb6896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrsa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRSA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcopper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCopperSmith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcopper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse_pub_key_lattice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RSA' is not defined"
      ]
     }
    ],
@@ -133,21 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inversão da chave pública"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Inversão do criptograma"
+    "Note-se que utilizou-se como padrão beta sempre igual a 1 e considerou-se X o seu limite superior na raiz. Observou-se que quanto maior a parte desconhecida, maior o X deveria ser, e consequentemente mais tempo demora."
    ]
   },
   {
@@ -159,40 +193,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "87"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N = Integers(87)\n",
-    "N.order()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "?random_prime"
-   ]
   },
   {
    "cell_type": "code",
@@ -204,21 +208,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.7",
-   "language": "",
-   "name": "sagemath"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
