--- a/TP3/HiddenNumberProblem.ipynb
+++ b/TP3/HiddenNumberProblem.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "- o target $t \\equiv [u|0]$\n",
     "\n",
-    "A abordagem B&V determina o segredo $s$ resolvendo o CVP do no reticulado $$\\mathcal{L} \\,\\equiv\\,\\Lambda(L)\\,$$ com o *target* $\\mathbf{t}$.\n",
+    "A abordagem B&V determina o segredo $s$ resolvendo o CVP (*Closest Vector Problem*) no reticulado $$\\mathcal{L} \\,\\equiv\\,\\Lambda(L)\\,$$ com o *target* $\\mathbf{t}$.\n",
     "\n",
     "\n",
     "#### Notas de implementação\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,8 @@
     "        self.lat_reduced = np.array(self.lat.reduced_basis)\n",
     "    \n",
     "    def msb(self, x):\n",
+    "        ''' Calculate an approximation of the most significant bits of x\n",
+    "        '''\n",
     "        valid_u = False\n",
     "        while (not valid_u):\n",
     "            u = ZZ.random_element(self.p)\n",
@@ -85,15 +87,21 @@
     "        return u\n",
     "\n",
     "    def define_target(self, s):\n",
+    "        ''' Define a target given a secret s\n",
+    "        '''\n",
     "        u = [self.msb(s * x_i) for x_i in self.x]\n",
     "        self.targ = [self.lambd * u_i for u_i in u]\n",
     "        self.targ.append(0)\n",
     "        \n",
     "    def solve_exact(self):\n",
+    "        ''' Exact CVP\n",
+    "        '''\n",
     "        cv_exact = self.lat.closest_vector(tuple(self.targ))\n",
     "        return cv_exact\n",
     "        \n",
     "    def solve_approx(self):\n",
+    "        ''' Approximate CVP (faster than solve_exact)\n",
+    "        '''\n",
     "        l_b = matrix(self.lat.reduced_basis)\n",
     "        t_b = matrix(1, self.n+1, [-t_i for t_i in self.targ])\n",
     "        z_b = matrix(self.n+1, 1, [0]*(self.n+1))\n",
@@ -101,30 +109,32 @@
     "        l1 = block_matrix(2, 2, [ [l_b, z_b], [t_b, M_b]])\n",
     "        l1_reduced = IntegerLattice(l1).reduced_basis\n",
     "        delta = np.array(l1_reduced[self.n+1][:-1])\n",
-    "        y1 = matrix(list(self.targ + delta))\n",
+    "        y1 = list(self.targ + delta)\n",
     "        return y1    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x: [6, 6]\n",
-      "target: [48, 48, 0]\n",
+      "x: [4, 2]\n",
+      "s: 4\n",
+      "target: [32, 16, 0]\n",
       "\n",
       "L: \n",
       "[112   0|  0]\n",
       "[  0 112|  0]\n",
       "[-------+---]\n",
-      "[ 96  96|  1]\n",
+      "[ 64  32|  1]\n",
       "\n",
-      "Exact CVP: (48, 48, -3)\n",
-      "Approx CVP: [48 48 -3]\n"
+      "Exact CVP: (32, 16, -3)\n",
+      "Approx CVP: [32, 16, -3]\n",
+      "-3 == 4 mod 7 ? True \n"
      ]
     }
    ],
@@ -136,14 +146,17 @@
     "bv = BV(p, n, k, s)\n",
     "exact = bv.solve_exact()\n",
     "approx = bv.solve_approx()\n",
+    "s_approx = approx[n]\n",
     "print(\"x: \" + str(bv.x))\n",
+    "print(\"s: \" + str(s))\n",
     "print(\"target: \" + str(bv.targ))\n",
     "print(\"\")\n",
     "print(\"L: \")\n",
     "print(bv.G)\n",
     "print(\"\")\n",
     "print(\"Exact CVP: \" + str(exact))\n",
-    "print(\"Approx CVP: \" + str(approx))"
+    "print(\"Approx CVP: \" + str(approx))\n",
+    "print(\"%d == %d mod %d ? %r \" % (s_approx, s, p, mod(s_approx, p) == s))"
    ]
   }
  ],
