--- a/TP3/NTRU_Encrypt.ipynb
+++ b/TP3/NTRU_Encrypt.ipynb
@@ -7,15 +7,89 @@
     "# NTRU Encrypt - PKE Scheme\n",
     "\n",
     "O sistema criptográfico NTRU é um sistema de chave pública baseado em reticulados, tendo sido o primeiro deste tipo. \n",
+    "A implementação desenvolvida neste trabalho corresponde ao criptosistema de chave pública `ntru-pke` que se baseia\n",
+    "na especificação original do NTRU desenvolvida por *Hoffstein, Pipher* e *Silverman*.\n",
     "\n",
-    "## Parâmetros\n",
     "\n",
-    "Num sistema criptográfico NTRU, **f** (e **g**, se necessário) são as chaves privadas, enquanto h\n",
-    "é a chave pública. Essas chaves podem ser geradas através do seguinte algoritmo:\n",
+    "## Sampler\n",
     "\n",
+    "A classe `Sampler` apresentada permite gerar polinómios ternários (**i.e.** com coeficientes -1,0,1) pseudo-aleatórios. Esta classe recorre a uma `seed` que determina a sequência obtida quando os parâmetros de entrada\n",
+    "- `N` : ordem do polinómio\n",
+    "- `d1` : número de coeficientes **1**'s\n",
+    "- `d2` : número de coeficientes **-1**'s\n",
+    "permanecem constantes.\n",
+    "\n",
+    "A especificação deste `Sampler`(gerador) para gerar um polinómio binário, presente \"**EESS #1: Implementation Aspects of NTRUEncrypt and pqNTRUSign**\", apresenta-se de seguida:\n",
+    "\n",
+    "1. f = 0\n",
+    "1. t = 0\n",
+    "1. while t < d1: \n",
+    "    1. k = pop( log(N) + 1 ) bits from seed\n",
+    "    1. i = k % N\n",
+    "    1. if f$_i$ == 0:\n",
+    "        1. f$_i$ = 1\n",
+    "        1. t += 1\n",
+    "1. return f.\n",
+    "\n",
+    "onde f corresponde ao polinómio gerado e f$_i$ ao coeficiente de ordem $i$ desse polinómio.\n",
+    "Este algoritmo é implementado pelo método `genBinaryPolynomial`.\n",
+    "\n",
+    "O método `genTrinaryPolynomial` gera o polinómio ternário recorrendo ao método `genBinaryPolynomial` para gerar\n",
+    "um polinómio binário e, posteriormente, inserir os coefiecientes **-1**'s."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sampler:\n",
+    "    def __init__(self, N, d1, d2, seed):\n",
+    "        self.N = N\n",
+    "        if d1 and d2:\n",
+    "            self.d1 = d1\n",
+    "            self.d2 = d2\n",
+    "        self.seed = seed\n",
+    "        \n",
+    "    def genBinaryPolynomial(self):\n",
+    "        ''' Generate a binary polynomial with d1 1's\n",
+    "        '''\n",
+    "        f = [0]*self.N\n",
+    "        t = 0\n",
+    "        while t < self.d1:\n",
+    "            bit_count = ceil(log(self.N)) + 1\n",
+    "            k = self.seed%(2**bit_count)\n",
+    "            self.seed >>= bit_count\n",
+    "            i = k % self.N\n",
+    "            if f[i] == 0:\n",
+    "                f[i] = 1\n",
+    "                t += 1\n",
+    "        return f\n",
+    "    \n",
+    "    def genTrinaryPolynomial(self):\n",
+    "        ''' Generate a trinary polynomial with d1 1's and d2 2's\n",
+    "        '''\n",
+    "        f = self.genBinaryPolynomial()\n",
+    "        t = 0\n",
+    "        while t < self.d2:\n",
+    "            bit_count = ceil(log(self.N)) + 1\n",
+    "            k = self.seed%(2**bit_count)\n",
+    "            self.seed >>= bit_count\n",
+    "            i = k % self.N\n",
+    "            if f[i] == 0:\n",
+    "                f[i] = -1\n",
+    "                t += 1\n",
+    "        return f "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Algoritmo de Geração de chaves\n",
     "\n",
-    "INPUT: Um conjunto de parâmetros $Param = \\{N, p, q, d\\}$ e uma $seed$.\n",
+    "**INPUT**: Um conjunto de parâmetros $Param = \\{N, p, q, d\\}$ e uma $seed$.\n",
     "\n",
     "1. Instanciar $Sampler$ com $\\tau(d + 1, d)$ e com a $seed$;\n",
     "2. $f ← Sampler$\n",
@@ -23,52 +97,51 @@
     "4. $g ← Sampler$\n",
     "5. $h = g/(pf + 1) mod q$\n",
     "\n",
-    "OUTPUT: Chave pública $h$ e chave secreta $(pf, g)$\n",
+    "**OUTPUT**: Chave pública $h$ e chave secreta $(pf, g)$\n",
     "\n",
     "## Algoritmo de Cifragem\n",
     "\n",
-    "INPUT: Chave pública h, mensagem msg de comprimento mlen, um conjunto de parâmetros $Param$ e a $seed$.\n",
+    "**INPUT**: Chave pública h, mensagem msg de comprimento mlen, um conjunto de parâmetros $Param$ e a $seed$.\n",
     "1. $m = Pad(msg, seed)$\n",
-    "2. $rseed = Hash(m|h)$\n",
-    "3. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
-    "4. $r ← Sampler$\n",
-    "5. $t = r ∗ h$\n",
-    "6. $tseed = Hash(t)$\n",
-    "7. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
-    "8. $m_{mask} ← Sampler$\n",
-    "9. $m' = m − m_{mask}(mod p)$\n",
-    "10. $c = t + m$\n",
+    "1. $rseed = Hash(m|h)$\n",
+    "1. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
+    "1. $r ← Sampler$\n",
+    "1. $t = r ∗ h$\n",
+    "1. $tseed = Hash(t)$\n",
+    "1. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
+    "1. $m_{mask} ← Sampler$\n",
+    "1. $m' = m − m_{mask}(mod p)$\n",
+    "1. $c = t + m$\n",
     "\n",
-    "OUTPUT: Criptograma **c**\n",
+    "**OUTPUT**: Criptograma **c**\n",
     "\n",
-    "O algoritmo acima usa um **método de *padding*** para lidar com\n",
-    "entropia insuficiente potencial de uma mensagem. Supondo que o tamanho da mensagem é válido e menor que $(N - 173)$ *bits*, o algoritmo *padding* funciona da seguinte maneira:\n",
+    "Este algoritmo usa um **método de *padding*** que lida com casos em que a mensagem apresente entropia insuficiente. Supondo que o tamanho da mensagem é válido e menor que $(N - 173)$ *bits*, o algoritmo *padding* funciona da seguinte maneira:\n",
     "\n",
-    "1. Converter $msg$ numa *string* de *bits*. Cada *bit* forma um coeficiente binário para a parte inferior do polinómio $m$, partindo do coeficiente 0.\n",
+    "1. Converter $msg$ numa *string* de *bits* que constituem os coeficientes do polinómio $m (x)$\n",
     "\n",
-    "2. Os últimos $167$ coeficientes de $m (x)$ são escolhidos aleatoriamente de $\\{−1, 0, 1\\}$ (com um *input* *seed* ). O que dá mais de $256$ bits de entropia.\n",
+    "2. Os últimos $167$ coeficientes de $m (x)$ são escolhidos aleatoriamente de $\\{−1, 0, 1\\}$ (com um *input* *seed* )\n",
     "\n",
-    "3. O comprimento da msg é convertido numa *string* binária de 8 *bits* e forma os últimos $173$ a $168$ coeficientes de $m (x)$.\n",
+    "3. O comprimento da $msg$ é convertido numa *string* binária de 8 *bits* e forma os últimos $173$ a $168$ coeficientes de $m (x)$.\n",
     "\n",
     "## Algorithm de Decifragem\n",
     "\n",
-    "INPUT: Chave secreta $f$, chave pública $h$, criptograma $c$, e o conjunto de parâmetros $Param$.\n",
+    "**INPUT**: Chave secreta $f$, chave pública $h$, criptograma $c$, e o conjunto de parâmetros $Param$.\n",
     "1. $m' = f ∗ c (mod p)$\n",
-    "2. $t = c − m$\n",
-    "3. $tseed = Hash(t)$\n",
-    "4. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
-    "5. $m_{mask} = Sampler$\n",
-    "6. $m = m' + m_{mask} (mod p)$\n",
-    "7. $rseed = Hash(m|h)$\n",
-    "8. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
-    "9. $r ← Sampler$\n",
-    "10. $msg, mlen = Extract(m)$\n",
-    "11. se $p · r ∗ h = t$ então\n",
-    "12. $result = msg, mlen$\n",
-    "13. caso contrário\n",
-    "14. $result = ⊥ $\n",
+    "1. $t = c − m$\n",
+    "1. $tseed = Hash(t)$\n",
+    "1. Instanciar $Sampler$ com $T$ e com $tseed$;\n",
+    "1. $m_{mask} = Sampler$\n",
+    "1. $m = m' + m_{mask} (mod p)$\n",
+    "1. $rseed = Hash(m|h)$\n",
+    "1. Instanciar $Sampler$ com $T$ e com $rseed$;\n",
+    "1. $r ← Sampler$\n",
+    "1. $msg, mlen = Extract(m)$\n",
+    "1. se $p · r ∗ h = t$ então:\n",
+    "    1. $result = msg, mlen$\n",
+    "1. senão:\n",
+    "    1. $result = ⊥ $\n",
     "\n",
-    "OUTPUT: $result$\n",
+    "**OUTPUT**: $result$\n",
     "\n",
     "No algoritmo acima a operação $Extrair ()$ corresponde ao inverso de $Pad ()$. Emite uma mensagem $m$ e seu comprimento $mlen$."
    ]
@@ -80,9 +153,6 @@
    "outputs": [],
    "source": [
     "from hashlib import sha512\n",
-    "from random import randint\n",
-    "\n",
-    "CRYPTO_BYTES = 32\n",
     "\n",
     "class NTRU(object):\n",
     "    def __init__(self, manual, d, N=None, p=None, q=None):\n",
@@ -188,42 +258,7 @@
     "        msg_len = 0\n",
     "        for i in range(1,6):\n",
     "            msg_len = msg_len*2+padded_msg[-i]\n",
-    "        return padded_msg, msg_len\n",
-    "    \n",
-    "    \n",
-    "class Sampler:\n",
-    "    def __init__(self, N, d1, d2, seed):\n",
-    "        self.N = N\n",
-    "        if d1 and d2:\n",
-    "            self.d1 = d1\n",
-    "            self.d2 = d2\n",
-    "        self.seed = seed\n",
-    "        \n",
-    "    def genBinaryPolynomial(self):\n",
-    "        f = [0]*self.N\n",
-    "        t = 0\n",
-    "        while t < self.d1:\n",
-    "            bit_count = ceil(log(self.N)) + 1\n",
-    "            k = self.seed%(2**bit_count)\n",
-    "            self.seed >>= bit_count\n",
-    "            i = k % self.N\n",
-    "            if f[i] == 0:\n",
-    "                f[i] = 1\n",
-    "                t += 1\n",
-    "        return f\n",
-    "    \n",
-    "    def genTrinaryPolynomial(self):\n",
-    "        f = self.genBinaryPolynomial()\n",
-    "        t = 0\n",
-    "        while t < self.d2:\n",
-    "            bit_count = ceil(log(self.N)) + 1\n",
-    "            k = self.seed%(2**bit_count)\n",
-    "            self.seed >>= bit_count\n",
-    "            i = k % self.N\n",
-    "            if f[i] == 0:\n",
-    "                f[i] = -1\n",
-    "                t += 1\n",
-    "        return f  "
+    "        return padded_msg, msg_len "
    ]
   },
   {
@@ -245,7 +280,7 @@
     "K = NTRU(False, 10)\n",
     "#K = NTRU(True, 10, N=443, q=2048, p=3) #NTRU-443\n",
     "msg = [choice([-1,0,1]) for i in range(10)]\n",
-    "seed =  int(sha512(bytes(\"12122121\")).hexdigest(), 16)\n",
+    "seed =  int(sha512(bytes(\"12122121\")).hexdigest(), 16) #seed\n",
     "e = K.encrypt(msg, seed)\n",
     "d = K.decrypt(e)\n",
     "print(d==msg)"
