--- a/TP3/RSA_Attack.ipynb
+++ b/TP3/RSA_Attack.ipynb
@@ -62,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-4d592087b875>, line 54)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-4d592087b875>\"\u001b[0;36m, line \u001b[0;32m54\u001b[0m\n\u001b[0;31m    return map(lambda(x,y):(K(x),y), g.roots())\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class RSA:\n",
     "    def __init__(self, l):\n",
@@ -119,7 +128,7 @@
     "    g = 0\n",
     "    for j in range(d+1):\n",
     "        g+= A[0,j]/X^j * x^j\n",
-    "    return map(lambda (x,y):(K(x),y), g.roots())\n",
+    "    return map(lambda(x,y):(K(x),y), g.roots())\n",
     "\n",
     "class CopperSmith:\n",
     "    def __init__(self, rsa):\n",
@@ -174,18 +183,21 @@
     "            print(recovered_p == self.rsa.p)\n",
     "            print(self.rsa.pubkey[0] // recovered_p == self.rsa.r)\n",
     "            \n",
-    "    def reverse_cript(self,c,m_2):\n",
+    "    def reverse_cript(self,pol,c,m_2):\n",
     "        N = Integers(self.rsa.pubkey[0])\n",
-    "        d = 3\n",
-    "        beta = 1\n",
+    "        d = pol.degree()\n",
+    "        if not pol.is_monic():\n",
+    "            raise ArithmeticError(\"The polynomial must be monic!\")\n",
+    "        if not 0 < beta <= 1:\n",
+    "            raise ValueError(\"beta should belongs in (0, 1]\")\n",
     "\n",
     "        R.<x> = PolynomialRing(N, implementation='NTL')\n",
     "        f = (x + m_2)^d - c\n",
     "\n",
     "        X = floor(self.rsa.pubkey[0] ^ (beta**2/3))\n",
-    "        w = small_roots2(f\n",
+    "        w = small_roots2(f)\n",
     "        if len(rts)>0:\n",
-    "            if len(m)<680:\n",
+    "            if len(m)< (1/3 * abs(N)):\n",
     "                m = w + m_2\n",
     "        return w\n",
     "        "
@@ -193,14 +205,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RSA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-87475ebb6896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrsa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRSA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcopper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCopperSmith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrsa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcopper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse_pub_key_lattice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RSA' is not defined"
+     ]
+    }
+   ],
    "source": [
     "rsa = RSA(128)\n",
     "copper = CopperSmith(rsa)\n",
     "copper.reverse_pub_key_lattice(1/2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
